Closed
Bug 196008
Opened 23 years ago
Closed 23 years ago
crash when dynamically creating iframe using js+DOM (except when debugging step-by-step)
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: sguazt, Assigned: blizzard)
References
Details
(Keywords: crash)
Attachments
(3 files)
|
4.27 KB,
application/x-tar-gz
|
Details | |
|
12.28 KB,
text/plain
|
Details | |
|
642 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030211
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030211
I have a page that when pressed a specified button create an IFrame using
Javascript+DOM; with Mozilla 1.3a all worked; instead with Mozilla 1.3b when
I press that button Mozilla crashes and exits.
I've tried to debug with the JS Debugger and I've noticed that running in
step-by-step mode all works; instead running in "Continue" mode Mozilla
crashes too.
In the attachment I have include an example.
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
Uncompressing the attachment ("gzip -dc iframe.tgz | tar xvf -")
the directory "iframe" will be created.
Load "main.html" and then click on "Show Details" button.
An IFrame at the bottom of the page should appear; however with
Mozilla 1.3b, the browser crashes and exits.
Comment 2•23 years ago
|
||
WFM 2003030208, Windows 2000.
Updated•23 years ago
|
Keywords: qawanted,
stackwanted
Comment 3•23 years ago
|
||
(gdb) frame 7
#7 0x415db69d in nsWindow::SetCursor(nsCursor) (this=0xbfffab38,
aCursor=3221203644) at nsWindow.cpp:749
749 gdk_window_set_cursor(GTK_WIDGET(mContainer)->window,
newCursor);
(gdb) p newCursor
$1 = (_GdkCursor *) 0xfffffffc
(gdb) p mContainer
$2 = (_MozContainer *) 0x0
(gdb) p mDrawingarea
$3 = (_MozDrawingarea *) 0x0
Comment 4•23 years ago
|
||
I don't crash with a default build (20030304 and 1.3b), but got the attached
stack with a trunk CVS/gtk2 build.
sguazt: are you using a gtk2 build?
I'm using a GTK2 binary version downloaded from:
http://ftp.mozilla.org/pub/mozilla/releases/mozilla1.3b/Red_Hat_8x_RPMS/gtk2/i3
86/
Comment 6•23 years ago
|
||
wfm using build 2003030408 (trunk) on Win2k.
| Assignee | ||
Comment 9•23 years ago
|
||
Simple crash fix.
| Assignee | ||
Comment 10•23 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 11•23 years ago
|
||
Thanks to all!
I hope there will be a new binary release soon. :)
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•