Bug #196008.  crash when dynamically creating iframe using js+DOM.  Make sure that the window has been created before setting the cursor.